test/valid/59843_simple_while/simple_while.mag
-- Author: 59843, Miguel Castelo

fun biggerThanFive (n) : Int -> Int =
  while n < 6 do (
    n = n + 1
  );
  n

fun main (_) : Unit -> Unit =
  print(countdown(3))